# saas-metering-platform

./: .gitignore  Makefile  README  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a3f1b7c82d01_add_api_keys_table.py  b4d2e8f19a03_add_rate_limit_and_quota_to_orgs.py  c5e3a9d07b12_add_usage_events_table.py  ced479937339_add_orgs_and_org_members.py  d8f2c1a94e02_add_events_table.py  f73e5aa66cbd_create_users_table.py
backend/app/: main.py
backend/app/api/: api_keys.py  auth.py  orgs.py  usage.py  v1.py
backend/app/core/: __init__.py  quota.py  rate_limit.py  redis.py  roles.py  security.py
backend/app/db/: deps.py  session.py
backend/app/models/: __init__.py  api_key.py  event.py  org_member.py  orgs.py  usage_event.py  user.py
backend/app/schemas/: api_keys.py  auth.py  events.py  orgs.py  usage.py
backend/app/services/: api_keys.py  events.py  orgs.py  usage.py  users.py
backend/tests/: conftest.py  test_api_keys.py  test_auth.py  test_orgs.py  test_quotas.py  test_rate_limit.py  test_usage.py  test_v1.py
